kubernetes/home/apps/networking/traefik-oauth/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-oauth
  labels:
    app: traefik-oauth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik-oauth
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: traefik-oauth
    spec:
      # serviceAccountName: traefik-ingress-controller
      # terminationGracePeriodSeconds: 60
      containers:
      - image: thomseddon/traefik-forward-auth:2
        name: traefik-oauth
        ports:
        - containerPort: 4181
          protocol: TCP
        resources: {}
