kubernetes/home/apps/networking/traefik-oauth/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-oauth
  labels:
    app: traefik-oauth
spec:
  type: ClusterIP
  selector:
    app: traefik-oauth
  ports:
  - name: auth-http
    port: 4181
    targetPort: 4181
    protocol: TCP
