kubernetes/home/apps/networking/traefik-oauth/app/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-oauth
  namespace: default
  labels:
    app: traefik-oauth
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`oauth.shaklab.com`)
      kind: Rule
      middlewares:
        - name: middlewares-chain-oauth
      services:
      - name: traefik-oauth
        port: 4181
  tls:
    secretName: shaklab-com-tls-certs
